To jupiter and beyond