@@ -1,17 +1,17 @@
 package no.lau.vdvil.parser.json;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import java.io.InputStreamReader;
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class CompositionJsonParserTest {
 
     @Test
     public void testParsingComposition() {
-        InputStreamReader reader = new InputStreamReader(ClassLoader.getSystemResourceAsStream("CompositionExample.dvl.json"));
+        InputStreamReader reader = new InputStreamReader(CompositionJsonParser.class.getClassLoader().getResourceAsStream("CompositionExample.dvl.json"));
 
         CompositionSerializedJson comp = CompositionJsonParser.parseJsonStringToTrack(reader);
-        assertEquals(new Float(150), comp.masterBpm);
+        assertEquals(Float.valueOf(150), comp.masterBpm);
         assertEquals("A simple example", comp.name);
         PartJson part0 = comp.parts.get(0);
         assertEquals("id1", part0.id());
